# gitstack

./: .cursorignore  .env.example  .eslintrc.json  .gitignore  LICENSE.md  README.md  arg.py  ci.yml  cli.py  jest.config.js  main.py  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  publish.yaml  pyproject.toml  requirement.txt  requirements.txt  setup.py  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: ci.yml
.gitstack/: snapshots.json
.next/: react-loadable-manifest.json  trace
.next/server/: _error.js  middleware-react-loadable-manifest.js
app/: globals.css  layout.tsx  page.tsx
app/auth-success/: page.tsx
app/cli-auth-success/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
app/privacy/: page.tsx
app/register/: page.tsx
app/terms/: page.tsx
backend/: package-lock.json  package.json
backend/src/: server.ts
components/: analytics-card.tsx  cli-widget.tsx  convex-client-provider.tsx  deployment-status.tsx  file-explorer.tsx  firewall-widget.tsx  login-form.tsx  mode-toggle.tsx  project-header.tsx  project-list-topbar.tsx  query-provider.tsx  registration-form.tsx  sidebar.tsx  topbar.tsx
components/code/: branch-picker.tsx  code-block.tsx  code-search.tsx  code-theme.ts  copy-button.tsx  file-tree.tsx  file-viewer.tsx  new-file-folder-dialog.tsx  (+5 more)
convex/: _schema.ts  cliAuth.ts  projects.ts  schema.ts  snapshots.ts  users.ts
docs/: architecture.md  deployment.md  rls-guidelines.md
gitstack/: ai.py  auth.py  config.py  deploy.py  main.py  package.json  snapshots.py  test_hash.py  utils.py
gitstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gitstackweb/: package.json
lib/: api.ts
src/: cli.py  gitstack.py
test/: jest.config.js
tests/: setupTests.ts
(+97 files in other folders)
