[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitstack"
version = "0.1.0"
description = "Gitstack — The Modern Version Control Powerhouse. Version everything."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Bola Banjo", email = "omogbolahanng@gmail.com" }
]
keywords = ["git", "cli", "version-control", "devtools", "productivity"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities"
]

dependencies = [
  "click>=8.1.3",
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "rich>=13.0.0",
  "typer>=0.9.0",
  "httpx>=0.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "isort>=5.10.1",
  "mypy>=1.4.0",
  "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://gitstack.dev"
Documentation = "https://docs.gitstack.dev"
Repository = "https://github.com/bolaabanjo/gitstack"
Issues = "https://github.com/bolaabanjo/gitstack/issues"

[project.scripts]
gitstack = "gitstack.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitstack*"]

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B"]
ignore = ["E501"]
